# training_c

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: binsearch.h  environment.h  permutation.h  permutationapp.h  recursion.h  recursionapp.h  sort.h  sortapp.h  variadic.h  variadicapp.h
src/: binsearch.c  environment.c  permutation.c  recursion.c  sort.c  variadic.c
